--- a/index.html
+++ b/index.html
@@ -29,72 +29,28 @@
       <div class="nav-bg"></div>
       <div class="navbtn-container">
         <a href="#home">HOME</a>
-        <a href="#about">ABOUT</a>
-        <a href="#skills">SKILLS</a>
         <a href="#projects">PROJECTS</a>
         <a href="#contact">CONTACT</a>
       </div>
     </div>
-    
     <div onclick="navswitch()" class="navbtn" title="NAVIGATION SWITCH"><i class="fas fa-ellipsis-h"></i></div>
-
-
-
   </nav>
 
   <div class="jumbotron section" id="home">
-    <div style="opacity: 0.45;" class="overlay"></div>
+    <div class="overlay"></div>
+    <div class="fun"></div>
     <div class="img" style="background-image: url(images/blur.png);"></div>
-    <!--<video autoplay loop muted playsinline src="images/banner.mp4"></video>-->
+    <video autoplay loop muted playsinline src="images/banner.mp4"></video>
     <div class="container">
       <h1>ERIC GOMEZ</h1>
-      <p>Full-Stack Web Developer and UI/UX Enthusiast</p>
+      <p class="scripting">welcome everybody</p>
     </div>
   </div>
 
   <div class="wrapper">
-
     <div class="main-container">
 
-      <div class="section section-container" id="about">
-        <div class="text">
-          <h1>ABOUT ME</h1>
-          <div class="split" style="text-transform:uppercase;"></div>
-          <p>I have an obsessive attention to detail</p>
-          <p>Love making things happen</p>
-          <p>Mission-driven work ethic</p>
-          <p>Learning new things everyday</p>
-          <p>Creating beautiful, responsive and accessible layouts from scratch</p>
-          <div class="split"></div>
-        </div>
-      </div>
-
-      <div class="section section-container" id="skills">
-        <div class="parallex"></div>
-        <div class="overlay"></div>
-        <div class="text" style="color: white">
-          <h1>SKILLS</h1>
-          <div class="split"></div>
-          <h3>LANGUAGES, LIBRARIES & FRAMEWORKS</h3>
-          <p>JS ES6, Python, Java, C#, C++, jQuery, Express.js, Bootstrap, HTML5 & CSS</p>
-          <h3>TOOLS</h3>
-          <p>Visual Studio Code, Adobe XD, Node.js, Inkscape, NPM, Visual Studio 2017, GitHub, Git, MSOffice, AMPPS,
-            Terminal</p>
-          <div class="split"></div>
-        </div>
-      </div>
-
       <div class="section section-container" id="projects">
-
-        <div class="text">
-          <h1>PROJECTS</h1>
-          <div class="split"></div>
-          Few projects developed using Bootstrap, HTML5, CSS3, jQuery, ECMAScript6. Project ideas gathered from <a
-            target="_blank" style="font-style: italic; font-size: 14px; color:black"
-            href="https://www.freecodecamp.org/gomez-eric">freeCodeCamp</a>.
-          <div class="split"></div>
-        </div>
-
         <div class="projects">
 
           <a id="WEATHER" class="project" target="_blank" href="https://gomez-eric.github.io/LocalWeather/"
@@ -154,13 +110,15 @@
       </div>
 
       <div class="section section-container" id="contact">
+
         <div class="footer"></div>
         <div class="parallex"></div>
         <div class="overlay"></div>
+
         <div class="footer-text" style="text-align: center">
           <h1>LETS WORK TOGETHER</h1>
           <div class="split"></div>
-          <div style="padding-bottom: 20px;"> SEND ME AN EMAIL</div>
+          <div style="padding-bottom: 20px;"> SEND ME AN EMAIL </div>
           <div style="font-size: 16px">
             <a style="font-style: italic; font-size: 14px" href="mailto:gomez123098@gmail.com">
               <i class="fas fa-envelope"></i> gomez123098@gmail.com
@@ -168,14 +126,10 @@
           </div>
           <div class="split"></div>
         </div>
+
       </div>
 
-
-
-
-
     </div>
-
   </div>
 
   <div onclick="topFunction()" id="scroll_to_top" class="btn" title="SCROLL TO TOP"><i class="fas fa-caret-up"></i>
